--- a/package.json
+++ b/package.json
@@ -20,15 +20,11 @@
     "@graphql-tools/load-files": "7.0.0",
     "@graphql-tools/merge": "9.0.0",
     "apollo-server": "^3.12.0",
-    "apollo-server-express": "^3.12.0",
-    "cors": "^2.8.5",
     "dotenv": "^16.1.0",
-    "express": "^4.18.2",
     "graphql": "^16.6.0",
     "mongoose": "^7.2.2",
-    "ncp": "^2.0.0",
-    "please": "^0.0.3",
-    "use": "^3.1.1"
+    "ncp": "^2.0.0"
+    
   },
   "devDependencies": {
     "@babel/cli": "^7.21.5",
