--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/index.js -p4001",
     "dev": "nodemon --exec babel-node src/index.js ",
     "cop": "ncp src/graphql/types  dist/graphql/types",
     "build": "babel src -d dist && npm run cop"
